--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
   To learn more about this file see: https://angular.io/config/solution-tsconfig.
 */
 {
-  "files": [],
-  "references": []
+    "files": [],
+    "references": [
+        {
+            "path": "./projects/table/tsconfig.lib.json"
+        }
+    ]
 }
