--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~10.0.9",
+        "@angular/cdk": "^10.2.0",
         "@angular/common": "~10.0.9",
         "@angular/compiler": "~10.0.9",
         "@angular/core": "~10.0.9",
         "@angular/forms": "~10.0.9",
+        "@angular/material": "^10.1.1",
         "@angular/platform-browser": "~10.0.9",
         "@angular/platform-browser-dynamic": "~10.0.9",
         "@angular/router": "~10.0.9",
+        "@halodigital/dialog": "^1.0.6",
+        "@halodigital/input": "^1.0.4",
+        "@halodigital/loading-animation": "^1.0.1",
+        "@halodigital/tooltip": "^1.0.8",
+        "moment-timezone": "^0.5.31",
         "rxjs": "~6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "~0.10.3"
