--- a/projects/table/package.json
+++ b/projects/table/package.json
@@ -2,10 +2,23 @@
     "name": "@halodigital/table",
     "version": "1.0.0",
     "peerDependencies": {
+        "@angular/cdk": "^10.2.0",
         "@angular/common": "^10.0.14",
-        "@angular/core": "^10.0.14"
+        "@angular/core": "^10.0.14",
+        "@angular/forms": "^10.0.14",
+        "@angular/router": "^10.0.14",
+        "@angular/material": "^10.1.1",
+        "@halodigital/dialog": "^1.0.6",
+        "@halodigital/input": "^1.0.4",
+        "@halodigital/loading-animation": "^1.0.1",
+        "@halodigital/tooltip": "^1.0.8",
+        "moment-timezone": "^0.5.31",
+        "rxjs": "^6.6.0"
     },
     "dependencies": {
         "tslib": "^2.0.0"
+    },
+    "devDependencies": {
+        "@types/moment-timezone": ">=0.5.13"
     }
 }
